cha-pre-live-flux2/cha-eks-5a/namespaces/sbmobl-performance/namespace-sbmobl-performance.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: sbmobl-performance
  name: sbmobl-performance
