cha-pre-live-flux2/cha-eks-5a/namespaces/sbmobl-performance/network-policy-apps.yaml
####################################################
## Allow ingress from sbmobl-performance and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-sbmobl-performance
  namespace: sbmobl-performance
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: sbmobl-performance
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from sbmobl-performance ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sbmobl-performance
  namespace: sbmobl-performance
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: sbmobl-performance

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: sbmobl-performance
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#########################################
##################################################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: sbmobl-performance
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

#################################################
## Allow traffic to mongo db atlas peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-mongodb
  namespace: sbmobl-performance
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.248.0/21
    ports:
    - port: 27015
      protocol: TCP
    - port: 27016
      protocol: TCP
    - port: 27017
      protocol: TCP
    - port: 27015
      protocol: UDP
    - port: 27016
      protocol: UDP
    - port: 27017
      protocol: UDP

##################################################
